--- a/package.json
+++ b/package.json
@@ -2,23 +2,32 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "IMS Project",
-  "main": "index.js",
+  "main": "src/PL/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/PL/app.js -L"
+    "start": "node src/PL/app.js",
+    "dev": "nodemon src/PL/app.js -L",
+    "knex": "KNEX_ENV=1 $(npm bin)/knex --knexfile ./src/database/knexfile.js \"$@\"",
+    "knex:win": "knex --knexfile ./src/database/knexfile.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IMS-TEAM-1/backend.git"
+    "url": "git@github.com/IMS-TEAM-1/backend.git"
   },
-  "author": "",
+  "author": "IMS Team Group 1",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/IMS-TEAM-1/backend/issues"
   },
   "homepage": "https://github.com/IMS-TEAM-1/backend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bookshelf": "^1.2.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "knex": "^0.95.15",
+    "knex-migrate": "^1.7.4",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
   }
 }
