--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:15.6
+FROM node:16.0.0
 
 EXPOSE 8080
 
@@ -7,6 +7,7 @@ WORKDIR /web-app
 COPY package*.json ./
 
 RUN npm install
+RUN npm run knex migrate:latest
 
 COPY src src
 
