--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-DB_HOST=127.0.0.1
+PORT=8080
+
+DB_HOST=database
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_DATABASE=ims_project
 DB_PORT=3306
 DB_DEBUG=false
