--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,39 @@
-version: "3.8"
+version: '3.7'
+
 services:
   backend:
-    build: "./"
-    ports: 
-    - 8080:8080
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
+    container_name: ims_backend
+    env_file:
+      - .env
+    ports:
+      - 8080:8080
     volumes:
-    - ./src/:/src/
+      - ./src/:/src/
+    networks:
+      - ims-backend-network
+    depends_on:
+      - database
+
+  database:
+    image: mariadb:latest
+    container_name: ims_db
+    environment:
+      MYSQL_DATABASE: ims_project
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_HOST: '%'
+    ports:
+      - '33306:3306'
+    networks:
+      - ims-backend-network
+    volumes:
+      - data:/var/lib/mysql
+
+networks:
+  ims-backend-network:
+    driver: bridge
+
+volumes:
+  data:
