function to label images started
Feature! Not yet done, cannot authorize the google vision api with our registered account :8ball:

Co-Authored-By: axwellfred <56869240+axwellfred@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/IMS-TEAM-1/backend#readme",
   "dependencies": {
+    "@google-cloud/vision": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "bookshelf": "^1.2.0",
     "dotenv": "^16.0.0",
