--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bookshelf": "^1.2.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "google-auth-library": "^8.0.2",
     "knex": "^0.95.15",
     "knex-migrate": "^1.7.4",
     "mysql": "^2.18.1",
