--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/IMS-TEAM-1/backend#readme",
   "dependencies": {
     "@google-cloud/vision": "^2.4.2",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "bookshelf": "^1.2.0",
